Тестирование оставшихся методов и классов.